--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,19 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.6'
+
+
+
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(11))
+    }
 }
 
 test {
