--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,12 @@
 plugins {
     id 'java'
     id 'application'
-    id 'maven'
+    id 'maven-publish'
 }
 
+
 group = 'com.github.corite'
-mainClassName = 'Main'
-
-
-group 'org.example'
-version '1.0-SNAPSHOT'
+version '0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
