tweaked build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,14 @@ java {
 test {
     useJUnitPlatform()
 }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        mavenLocal()
+    }
+}
